[shaders] Fix overflow again.
Bug: skia:12756
Reviewed-on: https://skia-review.googlesource.com/c/buildbot/+/496456
Commit-Queue: Joe Gregorio <jcgregorio@google.com>

--- a/shaders/modules/debugger-app-sk/debugger-app-sk.scss
+++ b/shaders/modules/debugger-app-sk/debugger-app-sk.scss
@@ -48,6 +48,7 @@
 }
 
 .body-sk debugger-app-sk {
+  overflow: hidden;
   display: block;
   background: var(--surface);
   margin: 0;
