--- a/shaders/modules/shaders-app-sk/shaders-app-sk.scss
+++ b/shaders/modules/shaders-app-sk/shaders-app-sk.scss
@@ -5,6 +5,7 @@
 @import '../themes/themes.scss';
 
 .body-sk shaders-app-sk {
+  overflow: hidden;
   display: block;
   background: var(--background);
   margin: 0;
